@startuml

package SageParserUI {

    class MainWindow {
        - m_taskSelectionWidget : TaskSelectionWidget
        - dynamicInputForm : DynamicInputForm
        - progressDialog : ProgressDialog
        - taskManager : TaskManager
        + setupUI()
        + bindSignalsAndSlots()
    }

    class TaskSelectionWidget {
        - comboBox : QComboBox
        + onSelectTask()
    }

    class DynamicInputForm {
        - inputWidgets : QMap<QString, QWidget>
        + updateInputFields(QString taskType)
        + getInputData() : QVariantMap
    }

    class ProgressDialog {
        - progressBar : QProgressBar
        + showProgress()
        + setMaximum(int value)
        + setValue(int value)
    }

    class TaskManager {
        + processSingleFileTask(QString taskType, QString filePath)
        + processDualFileTask(QString taskType, QString filePath1, QString filePath2, size_t columnIndex)
        + updateProgress(int value)
    }
}

package SageParserLib {

    interface IReader {
        + setFilePath(filesystem::path) : void
        + setDelimiter(char) : void
        + read() : shared_ptr<Table>
    }

    interface IWriter {
        + setFilePath(filesystem::path) : void
        + write(shared_ptr<Table>) : void
    }

    interface IProcessor {
        + process(shared_ptr<Table>) : shared_ptr<Table>
    }

}

MainWindow --> TaskSelectionWidget : contains
MainWindow --> DynamicInputForm : contains
MainWindow --> ProgressDialog : contains
MainWindow --> TaskManager : uses

TaskSelectionWidget ..> TaskManager : triggers processing
DynamicInputForm ..> TaskManager : provides file paths and parameters
ProgressDialog <-- TaskManager : updates

TaskManager ..> SageParserLib : uses

@enduml
